# editline

./: .bzrignore  .gitignore  .travis.yml  CHANGELOG.md  ChangeLog.md  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  TODO.md  aclocal.m4  complete.c  config.h.in  configure  configure.ac  editline.h  testit.c  unix.h
.github/: SECURITY.md
.github/workflows/: build.yml  coverity.yml  release.yml
debian/: .gitignore  changelog  control  copyright  libeditline-dev.install  libeditline0.install  libeditline1.install  libeditline1.symbols  rules
doc/: README
docs/: LOCALE.md  TODO.md
examples/: .gitignore  Makefile.am  Makefile.in  cli.c  excallback.c  fileman.c  testit.c
include/: Makefile.am  Makefile.in  editline.h
man/: Makefile.am  Makefile.in  editline.3
src/: Makefile.am  Makefile.in  complete.c  editline.c  editline.h  sysos9.c  sysunix.c  unix.h
test/: Makefile.am  basic.c  eltest.c  eltest.h  eltty.c  history.c  homeend.c  utf8-delete.c  utf8-move.c  utf8-word.c  utf8-wrap.c  wrap-tmux.sh
